syntax = "proto3";

import "google/protobuf/empty.proto";

package convex_token;

message ResolvedIndexName {
  reserved 1;
  string table_id = 3;
  string index_descriptor = 2;
}

message FieldPath {
  repeated string fields = 1;
}

message Interval {
  bytes start_inclusive = 1;
  oneof end {
    bytes exclusive = 2;
    google.protobuf.Empty after_all = 3;
  }
}

message SearchExactTextTerm {
  string token = 1;
}

message SearchFuzzyTextTerm {
  string token = 1;
  uint32 max_distance = 2;
  bool prefix = 3;
}

message SearchTextQueryTerm {
  FieldPath field_path = 1;
  oneof term {
    SearchExactTextTerm exact = 2;
    SearchFuzzyTextTerm fuzzy = 3;
  }
}
